<resources>
    <string name="app_name">Utter</string>

    <string name="mute">Mute</string>
    <string name="clear_history">Clear history</string>
    <string name="leave_group">Leave group</string>
    <string name="settings">Settings</string>
    <string name="playlist">Playlist</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="delete">Delete</string>
    <string name="notifications">Notifications</string>
    <string name="enabled">Enabled</string>
    <string name="mute_for_1_hour">Mute for 1 hour</string>
    <string name="mute_for_8_hours">Mute for 8 hours</string>
    <string name="mute_for_2_days">Mute for 2 days</string>
    <string name="disable">Disable</string>
    <string name="share">Share</string>
    <string name="block">Block</string>
    <string name="edit">Edit</string>
    <string name="add_member">Add member</string>
    <string name="edit_name">Edit name</string>
    <string name="delete_and_leave">Delete and leave</string>
    <string name="log_out">Log Out</string>
    <string name="in_1_hour">In 1 hour</string>
    <string name="in_30_minutes">In 30 minutes</string>
    <string name="in_15_minutes">In 15 minutes</string>
    <string name="in_5_minutes">In 5 minutes</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>

    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>

    <string name="wxyz">WXYZ</string>
    <string name="tuv">TUV</string>
    <string name="pqrs">PQRS</string>
    <string name="mno">MNO</string>
    <string name="jkl">JKL</string>
    <string name="ghi">GHI</string>
    <string name="def">DEF</string>
    <string name="abc">ABC</string>

    <string name="choose_your_pin">Choose your PIN</string>
    <string name="choose_your_pattern">Choose your pattern</string>
    <string name="choose_your_password">Choose your Password</string>
    <string name="draw_your_gesture">Draw your gesture</string>
    <string name="phone">Phone</string>
    <string name="passcode_lock">Passcode Lock</string>
    <string name="disabled">Disabled</string>
    <string name="online">online</string>
    <string name="username">Username</string>
    <string name="your_name">Your Name</string>
    <string name="set_up_your_first_name">Set up your first and last name</string>
    <string name="first_name">First name</string>
    <string name="last_name_opt">Last name (optional)</string>
    <string name="invalid_phone_num">Invalid phone number</string>
    <string name="code">Code</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone number</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="when_you_set_up_an_additional_passcode">When you set up an additional passcode, a lock icon will appear on the chats page. Tap it to lock and unlock your Telegram app.</string>
    <string name="note_if_you_forget_the_passcode">&#160;Note: if you forget the passcode, you&#8217;ll need to delete and reinstall the app. All secret chats will be lost.</string>
    <string name="auto_lock">Auto-Lock</string>
    <string name="require_passcode_if_you_away">Require passcode if you away for a time.</string>
    <string name="we_will_send_an_sms">We will send an SMS with a confirmation code to your phone number.</string>
    <string name="slide_to_cancel">Slide to Cancel</string>
    <string name="contacts">Contacts</string>
    <string name="unknown">Unknown</string>
    <string name="no_messages_here_yet">No messages here yet…</string>
    <string name="message">Message</string>
    <string name="activation_code">Activation Code</string>
    <string name="we_send_an_sms_with_an_activation_code">We&#8217;ve sent an SMS with an activation code to your phone number&#160;</string>
    <string name="wrong_code">Wrong code</string>
    <string name="incognito">Incognito</string>
    <string name="last_seen">last seen&#160;</string>
    <string name="minutes_ago">&#160;minutes ago</string>
    <string name="hours_ago">&#160;hours ago</string>
    <string name="last_seen_week_ago">last seen a week ago</string>
    <string name="last_seen_month_ago">last seen a month ago</string>
    <string name="downloading">Downloading&#160;</string>
    <string name="of">&#160;of&#160;</string>
    <string name="no_file_name">No file name</string>
    <string name="can_not_open_file">can&#8217;t open file</string>
    <string name="chose_image_from">Chose image from</string>
    <string name="chose_action">Chose action</string>
    <string name="image_from_gallery">Image from gallery</string>
    <string name="image_from_camera">Image from camera</string>
    <string name="delete_profile_photo">Delete profile photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="no_selected_items">No selected items</string>
    <string name="shred_media">Shared Media</string>
    <string name="about">About</string>
    <string name="add_to_group">Add to Group</string>
    <string name="send_">Send&#160;</string>
    <string name="_photos">&#160;photos</string>
    <string name="_photo">&#160;photo</string>
    <string name="bot">Bot</string>
    <string name="members_">&#160;members,&#160;</string>
    <string name="_online">&#160;online</string>
    <string name="has_no_access_to_messages">Has no access to messages</string>
    <string name="unblock">Unblock</string>
    <string name="select_user">Select User</string>
    <string name="select_group">Select Group</string>
    <string name="select_chat">Select Chat</string>
    <string name="enter_your_password_to_unlock">Enter your password to unlock</string>
    <string name="passcodes_do_not_match">Passcodes do not match</string>
    <string name="enter_your_pin_to_unlock">Enter your PIN to unlock</string>
    <string name="enter_your_pattern_to_unlock">Enter your pattern to unlock</string>
    <string name="minimum_count_of_points_is_2">Minimum count of points is 2.</string>
    <string name="enter_your_gesture_to_unlock">Enter your gesture to unlock</string>
    <string name="start_big">START</string>
    <string name="unmute">Unmute</string>
    <string name="you_are_not_in_chat">You are not in chat</string>
    <string name="repeat_your_pin">Repeat your PIN</string>
    <string name="repeat_your_pattern">Repeat your pattern</string>
    <string name="repeat_your_gesture">Repeat your gesture</string>
    <string name="please_">Please,&#160;</string>
    <string name="must_be_4_numbers">Must be 4 numbers.</string>
    <string name="minimum_length_for_password_is_4">Minimum length for password is 4 symbols!</string>
    <string name="repeat_your_password">Repeat your Password</string>
    <string name="in_30_min">In 30 min</string>
    <string name="in_15_min">In 15 min</string>
    <string name="in_5_min">In 5 min</string>
    <string name="chat_name">Chat name</string>
    <string name="forward">Forward</string>
    <string name="cancel">Cancel</string>
    <string name="can_not_add_file_to_gallery">Can&#8217;t add file to gallery</string>
    <string name="photo_added_to_gallery">Photo added to gallery</string>
    <string name="code_is_empty">Code is empty</string>
    <string name="you">You</string>
    <string name="_created_the_group_">&#160;created the group&#160;</string>
    <string name="created_the_group_">Created the group&#160;</string>
    <string name="_invite_">&#160;invite&#160;</string>
    <string name="new_user_added_in_chat">New user added in chat</string>
    <string name="new_group_name">New group name&#160;</string>
    <string name="_changed_group_name_to_">&#160;changed the group name to&#160;</string>
    <string name="chat_photo_was_deleted">Chat photo was deleted</string>
    <string name="deleted_chat_photo">&#160;deleted chat photo</string>
    <string name="added_new_user">Added new user&#160;</string>
    <string name="_added_new_user">&#160;added new user&#160;</string>
    <string name="left_group">&#160;left group</string>
    <string name="message_was_deleted">Message was deleted</string>
    <string name="unsupported_message">Unsupported message</string>
    <string name="chat_photo_was_changed">Chat photo was changed</string>
    <string name="_new_messages">&#160;new messages</string>
    <string name="video">Video</string>
    <string name="voice">Voice</string>
    <string name="audio">Audio</string>
    <string name="sticker">Sticker</string>
    <string name="chat_join_by_link">Chat join by link</string>
    <string name="venue">Venue</string>
    <string name="web_page">WebPage</string>
    <string name="photo">Photo</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="_changed_chat_photo">&#160;changed chat photo</string>
    <string name="removed">&#160;removed&#160;</string>
    <string name="remove_user">Remove user</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="are_you_sure_to_delete_contact">Are you sure you want to delete a contact?</string>
    <string name="db">&#160;dB</string>
    <string name="hz">&#160;Hz</string>
    <string name="equalizer">Equalizer</string>
    <string name="what_this_bot_can_do">What this bot can do?</string>

    <string-array name="pass_code_list">
        <item>PIN</item>
        <item>Password</item>
        <item>Pattern</item>
        <item>Gesture</item>
    </string-array>

    <string-array name="shared_list">
        <item>Shared Media</item>
        <item>Audio Files</item>
    </string-array>

    <string name="drawer_state_opened">opened</string>
    <string name="drawer_state_closed">closed</string>

    <string name="title_activity_dialog_list">DialogListActivity</string>
    <string name="title_activity_phone_number">PhoneNumberActivity</string>
    <string name="title_activity_activation_code">ActivationCodeActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_country">Country</string>
    <string name="title_activity_set_name">SetNameActivity</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_edit_name">EditNameActivity</string>
    <string name="title_activity_pass_code_lock">PassCodeLockActivity</string>
    <string name="title_activity_set_pass_code">SetPassCodeActivity</string>
    <string name="title_activity_music_player">MusicPlayerActivity</string>
    <string name="title_activity_shared_media">SharedMediaActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_bot_info">BotInfoActivity</string>
    <string name="title_activity_intermediate">IntermediateActivity</string>
    <string name="title_activity_enter_pass_code">EnterPassCodeActivity</string>
    <string name="title_activity_equalizer">EqualizerActivity</string>

    <string name="action_settings">Settings</string>
</resources>
