<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.stayfprod.utter.ui.activity.ProfileActivity">


    <item
        android:id="@+id/action_notification"
        android:orderInCategory="1"
        android:title="@string/notifications"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_notification_enabled"
                android:orderInCategory="1"
                android:title="@string/enabled"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_notification_mute_one_hour"
                android:orderInCategory="2"
                android:title="@string/mute_for_1_hour"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_notification_mute_8_hours"
                android:orderInCategory="3"
                android:title="@string/mute_for_8_hours"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_notification_mute_2_days"
                android:orderInCategory="4"
                android:title="@string/mute_for_2_days"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_notification_disable"
                android:orderInCategory="5"
                android:title="@string/disable"
                app:showAsAction="never"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="1"
        android:title="@string/share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_block"
        android:orderInCategory="2"
        android:title="@string/block"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="3"
        android:title="@string/edit"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="4"
        android:title="@string/delete"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_add_member"
        android:orderInCategory="5"
        android:title="@string/add_member"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_edit_name"
        android:orderInCategory="6"
        android:title="@string/edit_name"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_and_leave"
        android:orderInCategory="7"
        android:title="@string/delete_and_leave"
        app:showAsAction="never"/>
</menu>
