<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stayfprod.utter.ui.activity.auth.ActivationCodeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/a_actionBar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/theme_actionbar_color"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/Toolbar_Popup">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/t_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="2dp"
                android:text="@string/activation_code"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/a_activation_code_text_view_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/a_actionBar"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="25dp"
        android:text="@string/we_send_an_sms_with_an_activation_code"/>

    <EditText
        android:id="@+id/a_activation_code_edit_text_code"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/a_activation_code_text_view_info"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bottom_line"
        android:hint="@string/code"
        android:inputType="number"
        android:textColorHint="#b2b2b2"
        android:textCursorDrawable="@null"/>

    <TextView
        android:id="@+id/a_activation_code_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/a_activation_code_edit_text_code"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="5dp"
        android:text="@string/wrong_code"
        android:visibility="gone"/>

</RelativeLayout>
